hphp/test/zend/good/Zend/tests/unset_cv10.php.skipif
<?php if (!extension_loaded("spl")) print "skip SPL extension required"; ?>